--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "path": "~0.4.9",
     "underscore": "~1.5.2",
     "mongoose": "~3.8.0",
-    "mongodb": "~1.3.19"
+    "mongodb": "~1.3.19",
+    "passport": "~0.1.17",
+    "passport-local": "~0.1.6"
   }
 }
